fix telephone detection ios text color faq page

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,6 +1,7 @@
 :root {
     /*------------------ colors --------------*/
     --primary-color: #1C6A5D;
+    --primary-color-dark: #1B685E;
     --primary-color-soft: #E9FFFD;
     --secondary-color: #000000;
     --secondary-color-soft: #131718;
